ImageUtil适配问题（未解决）

--- a/lib-common/src/main/res/layout/dialog_loading.xml
+++ b/lib-common/src/main/res/layout/dialog_loading.xml
@@ -12,10 +12,10 @@
         android:background="@drawable/dialog_loading_bg"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="10dp"
         android:paddingLeft="21dp"
+        android:paddingTop="10dp"
         android:paddingRight="21dp"
-        android:paddingTop="10dp">
+        android:paddingBottom="10dp">
 
         <ProgressBar
             android:id="@+id/progressBar1"
