完善菜品刷新流，增加事件总线

--- a/module_order/src/main/res/layout/fragment_choose_food.xml
+++ b/module_order/src/main/res/layout/fragment_choose_food.xml
@@ -1,107 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.scwang.smartrefresh.layout.SmartRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/smart_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:fillViewport="true"
-    android:overScrollMode="never"
     tools:context=".fragment.ChooseFoodFragment"
-    android:id="@+id/container">
-
-    <com.google.android.material.appbar.AppBarLayout
+    >
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:overScrollMode="never"
         >
-        <LinearLayout
-            android:id="@+id/search_view"
+
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            android:paddingLeft="7dp"
-            android:paddingRight="7dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="3dp"
-                android:paddingRight="1dp"
-                android:paddingTop="3dp"
-                android:paddingBottom="3dp"
-                android:src="@drawable/back_arrow_24"/>
-            <TextView
-                android:id="@+id/tv_search"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="7.5"
-                android:background="@drawable/top_search_title_bg"
-                app:drawableStartCompat="@drawable/ic_baseline_search_24"
-                 />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="搜索"
-                android:gravity="center"
-                />
-        </LinearLayout>
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/search_view"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:paddingLeft="7dp"
+                android:paddingRight="7dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:paddingLeft="3dp"
+                    android:paddingTop="3dp"
+                    android:paddingRight="1dp"
+                    android:paddingBottom="3dp"
+                    android:src="@drawable/back_arrow_24" />
+
+                <TextView
+                    android:id="@+id/tv_search"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="7.5"
+                    android:background="@drawable/top_search_title_bg"
+                    app:drawableStartCompat="@drawable/ic_baseline_search_24" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="搜索" />
+            </LinearLayout>
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="119dp"
+                        android:layout_marginStart="29dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/choose_food_place" />
+
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="119dp"
+                        android:layout_marginEnd="29dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/choose_food_place" />
+                </LinearLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/place_tab"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_collapseMode="pin" />
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <ImageView
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_left_menu"
                     android:layout_width="0dp"
-                    android:layout_height="119dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_marginStart="29dp"
-                    android:layout_marginEnd="20dp"
-                    android:src="@drawable/choose_food_place"/>
-                <ImageView
+                    android:background="@color/rv_left_bg_not_selected" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_right_menu"
                     android:layout_width="0dp"
-                    android:layout_height="119dp"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="29dp"
-                    android:src="@drawable/choose_food_place"/>
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3.5" />
             </LinearLayout>
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/place_tab"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_collapseMode="pin"/>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_left_menu"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/rv_left_bg_not_selected"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_right_menu"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3.5"/>
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+        </androidx.core.widget.NestedScrollView>
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
+
